# basino

./: .gitignore  .gitlab-ci.yml  Makefile  README.md
.github/workflows/: Makefile.yml
basino/: Makefile  avr.gdb  basino.S  il.S  inst.S  memory.x  queue.S  stack.S
basino_atmega328p/: LICENSE  basino.nim  basino_atmega328p.nim  config.nims  nim-avr-gdb
rust-basino/: Cargo.toml  rust-toolchain.toml
rust-basino/.cargo/: config.toml
rust-basino/avr-specs/: avr-atmega328p.json
rust-basino/examples/: test_stack.rs
rust-basino/src/: error.rs  il.rs  lib.rs  main.rs  queue.rs  stack.rs
